@@ -1,24 +1,15 @@
 require_relative '../app'
 
+# Toronto, ON.
 coordinates =
   [
-    {lat: 55.37855628571428,  lng: 37.25669557}, {lat: 55.37855628571428,  lng: 37.381962030000004}, {lat: 55.37855628571428, lng: 37.50722849}, {lat: 55.37855628571428, lng: 37.63249495}, {lat: 55.37855628571428, lng: 37.75776141000001}, {lat: 55.37855628571428, lng: 37.88302787},
-    {lat: 55.415679857142855, lng: 37.3193288},  {lat: 55.415679857142855, lng: 37.44459526}, {lat: 55.415679857142855, lng: 37.56986172}, {lat: 55.415679857142855, lng: 37.695128180000005}, {lat: 55.415679857142855, lng: 37.82039464}, {lat: 55.415679857142855, lng: 37.945661099999995},
-    {lat: 55.45280342857143,  lng: 37.25669557}, {lat: 55.45280342857143,  lng: 37.381962030000004}, {lat: 55.45280342857143, lng: 37.50722849}, {lat: 55.45280342857143, lng: 37.63249495}, {lat: 55.45280342857143, lng: 37.75776141000001}, {lat: 55.45280342857143, lng: 37.88302787},
-    {lat: 55.489927,          lng: 37.3193288},  {lat: 55.489927,          lng: 37.44459526}, {lat: 55.489927, lng: 37.56986172}, {lat: 55.489927, lng: 37.695128180000005}, {lat: 55.489927, lng: 37.82039464}, {lat: 55.489927, lng: 37.945661099999995},
-    {lat: 55.527050571428575, lng: 37.25669557}, {lat: 55.527050571428575, lng: 37.381962030000004}, {lat: 55.527050571428575, lng: 37.50722849}, {lat: 55.527050571428575, lng: 37.63249495}, {lat: 55.527050571428575, lng: 37.75776141000001}, {lat: 55.527050571428575, lng: 37.88302787},
-    {lat: 55.56417414285714,  lng: 37.3193288},  {lat: 55.56417414285714,  lng: 37.44459526}, {lat: 55.56417414285714, lng: 37.56986172}, {lat: 55.56417414285714, lng: 37.695128180000005}, {lat: 55.56417414285714, lng: 37.82039464}, {lat: 55.56417414285714, lng: 37.945661099999995},
-    {lat: 55.601297714285714, lng: 37.25669557}, {lat: 55.601297714285714, lng: 37.381962030000004}, {lat: 55.601297714285714, lng: 37.50722849}, {lat: 55.601297714285714, lng: 37.63249495}, {lat: 55.601297714285714, lng: 37.75776141000001}, {lat: 55.601297714285714, lng: 37.88302787},
-    {lat: 55.63842128571429,  lng: 37.3193288},  {lat: 55.63842128571429,  lng: 37.44459526}, {lat: 55.63842128571429, lng: 37.56986172}, {lat: 55.63842128571429, lng: 37.695128180000005}, {lat: 55.63842128571429, lng: 37.82039464}, {lat: 55.63842128571429, lng: 37.945661099999995},
-    {lat: 55.67554485714286,  lng: 37.25669557}, {lat: 55.67554485714286,  lng: 37.381962030000004}, {lat: 55.67554485714286, lng: 37.50722849}, {lat: 55.67554485714286, lng: 37.63249495}, {lat: 55.67554485714286, lng: 37.75776141000001}, {lat: 55.67554485714286, lng: 37.88302787},
-    {lat: 55.712668428571426, lng: 37.3193288},  {lat: 55.712668428571426, lng: 37.44459526}, {lat: 55.712668428571426, lng: 37.56986172}, {lat: 55.712668428571426, lng: 37.695128180000005}, {lat: 55.712668428571426, lng: 37.82039464}, {lat: 55.712668428571426, lng: 37.945661099999995},
-    {lat: 55.749792,          lng: 37.25669557}, {lat: 55.749792,          lng: 37.381962030000004}, {lat: 55.749792, lng: 37.50722849}, {lat: 55.749792, lng: 37.63249495}, {lat: 55.749792, lng: 37.75776141000001}, {lat: 55.749792, lng: 37.88302787},
-    {lat: 55.78691557142857,  lng: 37.3193288},  {lat: 55.78691557142857,  lng: 37.44459526}, {lat: 55.78691557142857, lng: 37.56986172}, {lat: 55.78691557142857, lng: 37.695128180000005}, {lat: 55.78691557142857, lng: 37.82039464}, {lat: 55.78691557142857, lng: 37.945661099999995},
-    {lat: 55.824039142857146, lng: 37.25669557}, {lat: 55.824039142857146, lng: 37.381962030000004}, {lat: 55.824039142857146, lng: 37.50722849}, {lat: 55.824039142857146, lng: 37.63249495}, {lat: 55.824039142857146, lng: 37.75776141000001}, {lat: 55.824039142857146, lng: 37.88302787},
-    {lat: 55.86116271428571,  lng: 37.3193288},  {lat: 55.86116271428571,  lng: 37.44459526}, {lat: 55.86116271428571, lng: 37.56986172}, {lat: 55.86116271428571, lng: 37.695128180000005}, {lat: 55.86116271428571, lng: 37.82039464}, {lat: 55.86116271428571, lng: 37.945661099999995},
-    {lat: 55.898286285714285, lng: 37.25669557}, {lat: 55.898286285714285, lng: 37.381962030000004}, {lat: 55.898286285714285, lng: 37.50722849}, {lat: 55.898286285714285, lng: 37.63249495}, {lat: 55.898286285714285, lng: 37.75776141000001}, {lat: 55.898286285714285, lng: 37.88302787},
-    {lat: 55.93540985714286,  lng: 37.3193288},  {lat: 55.93540985714286,  lng: 37.44459526}, {lat: 55.93540985714286, lng: 37.56986172}, {lat: 55.93540985714286, lng: 37.695128180000005}, {lat: 55.93540985714286, lng: 37.82039464}, {lat: 55.93540985714286, lng: 37.945661099999995},
-    {lat: 55.97253342857143,  lng: 37.25669557}, {lat: 55.97253342857143,  lng: 37.381962030000004}, {lat: 55.97253342857143, lng: 37.50722849}, {lat: 55.97253342857143, lng: 37.63249495}, {lat: 55.97253342857143, lng: 37.75776141000001}, {lat: 55.97253342857143, lng: 37.88302787},
+    {:lat=>43.57, :lng=>-79.64}, {:lat=>43.57, :lng=>-79.46}, {:lat=>43.57, :lng=>-79.29}, {:lat=>43.57, :lng=>-79.11},
+    {:lat=>43.62, :lng=>-79.55}, {:lat=>43.62, :lng=>-79.38}, {:lat=>43.62, :lng=>-79.20},
+    {:lat=>43.67, :lng=>-79.64}, {:lat=>43.67, :lng=>-79.46}, {:lat=>43.67, :lng=>-79.29}, {:lat=>43.67, :lng=>-79.11},
+    {:lat=>43.71, :lng=>-79.55}, {:lat=>43.71, :lng=>-79.38}, {:lat=>43.71, :lng=>-79.20},
+    {:lat=>43.76, :lng=>-79.64}, {:lat=>43.76, :lng=>-79.46}, {:lat=>43.76, :lng=>-79.29}, {:lat=>43.76, :lng=>-79.11},
+    {:lat=>43.81, :lng=>-79.55}, {:lat=>43.81, :lng=>-79.38}, {:lat=>43.81, :lng=>-79.20},
+    {:lat=>43.86, :lng=>-79.64}, {:lat=>43.86, :lng=>-79.46}, {:lat=>43.86, :lng=>-79.29}, {:lat=>43.86, :lng=>-79.11},
   ]
 
 p "At start #{GeoPoint.count} geo_points."
