@@ -5,19 +5,19 @@ def coordinates(sw, ne, n_lat, n_lng)
 
   start_lng = sw[:lng]
   end_lng = ne[:lng]
-  period_lng = (end_lng - start_lng)/n_lng
+  period_lng = (end_lng - start_lng)/n_lat
 
   out = []
-  n_lat.times.each do |i_lat|
-    n_lng.times.each do |i_lng|
+  (n_lat+1).times.each do |i_lat|
+    (n_lng+1).times.each do |i_lng|
       current_lat = start_lat + i_lat * period_lat
       current_lng = start_lng + i_lng * period_lng
       out << { lat: current_lat, lng: current_lng }
     end
   end
 
-  (n_lat-1).times.each do |i_lat|
-    (n_lng-1).times.each do |i_lng|
+  n_lat.times.each do |i_lat|
+    n_lng.times.each do |i_lng|
       current_lat = start_lat + i_lat * period_lat + period_lat/2
       current_lng = start_lng + i_lng * period_lng + period_lng/2
       out << { lat: current_lat, lng: current_lng }
@@ -29,43 +29,34 @@ end
 
 
 # Moscow:
-sw = {
-  lat: 55.489927,
-  lng: 37.3193288
-}
-ne = {
-  lat: 56.009657,
-  lng: 37.9456611
-}
+sw = { lat: 55.489927, lng: 37.3193288 }
+ne = { lat: 56.009657, lng: 37.9456611 }
+
+# Toronto:
+sw = { lat: 43.57, lng: -79.64 }
+ne = { lat: 43.86, lng: -79.11 }
 
 
 a = Geokit::LatLng.new(sw[:lat],sw[:lng])
 b = Geokit::LatLng.new(ne[:lat],ne[:lng])
-a.distance_to(b) # 70km
+a.distance_to(b) # 33.2km - SW to NE
 
 a = Geokit::LatLng.new(sw[:lat],sw[:lng])
 b = Geokit::LatLng.new(sw[:lat],ne[:lng])
-a.distance_to(b) # 40km
+a.distance_to(b) # 26.6km - W to E
 
 a = Geokit::LatLng.new(sw[:lat],sw[:lng])
 b = Geokit::LatLng.new(ne[:lat],sw[:lng])
-a.distance_to(b) # 60km
+a.distance_to(b) # 20km - N to S
 
-
-coordinates(sw, ne, 7, 5)
+coordinates(sw, ne, 3, 3)
 
 [
-  {lat: 55.489927,          lng: 37.3193288}, {lat: 55.489927, lng: 37.44459526}, {lat: 55.489927, lng: 37.56986172}, {lat: 55.489927, lng: 37.695128180000005}, {lat: 55.489927, lng: 37.82039464},
-  {lat: 55.56417414285714,  lng: 37.3193288}, {lat: 55.56417414285714, lng: 37.44459526}, {lat: 55.56417414285714, lng: 37.56986172}, {lat: 55.56417414285714, lng: 37.695128180000005}, {lat: 55.56417414285714, lng: 37.82039464},
-  {lat: 55.63842128571429,  lng: 37.3193288}, {lat: 55.63842128571429, lng: 37.44459526}, {lat: 55.63842128571429, lng: 37.56986172}, {lat: 55.63842128571429, lng: 37.695128180000005}, {lat: 55.63842128571429, lng: 37.82039464},
-  {lat: 55.712668428571426, lng: 37.3193288}, {lat: 55.712668428571426, lng: 37.44459526}, {lat: 55.712668428571426, lng: 37.56986172}, {lat: 55.712668428571426, lng: 37.695128180000005}, {lat: 55.712668428571426, lng: 37.82039464},
-  {lat: 55.78691557142857,  lng: 37.3193288}, {lat: 55.78691557142857, lng: 37.44459526}, {lat: 55.78691557142857, lng: 37.56986172}, {lat: 55.78691557142857, lng: 37.695128180000005}, {lat: 55.78691557142857, lng: 37.82039464},
-  {lat: 55.86116271428571,  lng: 37.3193288}, {lat: 55.86116271428571, lng: 37.44459526}, {lat: 55.86116271428571, lng: 37.56986172}, {lat: 55.86116271428571, lng: 37.695128180000005}, {lat: 55.86116271428571, lng: 37.82039464},
-  {lat: 55.93540985714286,  lng: 37.3193288}, {lat: 55.93540985714286, lng: 37.44459526}, {lat: 55.93540985714286, lng: 37.56986172}, {lat: 55.93540985714286, lng: 37.695128180000005}, {lat: 55.93540985714286, lng: 37.82039464},
-  {lat: 55.527050571428575, lng: 37.381962030000004}, {lat: 55.527050571428575, lng: 37.50722849}, {lat: 55.527050571428575, lng: 37.63249495}, {lat: 55.527050571428575, lng: 37.75776141000001},
-  {lat: 55.601297714285714, lng: 37.381962030000004}, {lat: 55.601297714285714, lng: 37.50722849}, {lat: 55.601297714285714, lng: 37.63249495}, {lat: 55.601297714285714, lng: 37.75776141000001},
-  {lat: 55.67554485714286,  lng: 37.381962030000004}, {lat: 55.67554485714286, lng: 37.50722849}, {lat: 55.67554485714286, lng: 37.63249495}, {lat: 55.67554485714286, lng: 37.75776141000001},
-  {lat: 55.749792,          lng: 37.381962030000004}, {lat: 55.749792, lng: 37.50722849}, {lat: 55.749792, lng: 37.63249495}, {lat: 55.749792, lng: 37.75776141000001},
-  {lat: 55.824039142857146, lng: 37.381962030000004}, {lat: 55.824039142857146, lng: 37.50722849}, {lat: 55.824039142857146, lng: 37.63249495}, {lat: 55.824039142857146, lng: 37.75776141000001},
-  {lat: 55.898286285714285, lng: 37.381962030000004}, {lat: 55.898286285714285, lng: 37.50722849}, {lat: 55.898286285714285, lng: 37.63249495}, {lat: 55.898286285714285, lng: 37.75776141000001}
+  {:lat=>43.57, :lng=>-79.64}, {:lat=>43.57, :lng=>-79.46}, {:lat=>43.57, :lng=>-79.29}, {:lat=>43.57, :lng=>-79.11},
+  {:lat=>43.62, :lng=>-79.55}, {:lat=>43.62, :lng=>-79.38}, {:lat=>43.62, :lng=>-79.20},
+  {:lat=>43.67, :lng=>-79.64}, {:lat=>43.67, :lng=>-79.46}, {:lat=>43.67, :lng=>-79.29}, {:lat=>43.67, :lng=>-79.11},
+  {:lat=>43.71, :lng=>-79.55}, {:lat=>43.71, :lng=>-79.38}, {:lat=>43.71, :lng=>-79.20},
+  {:lat=>43.76, :lng=>-79.64}, {:lat=>43.76, :lng=>-79.46}, {:lat=>43.76, :lng=>-79.29}, {:lat=>43.76, :lng=>-79.11},
+  {:lat=>43.81, :lng=>-79.55}, {:lat=>43.81, :lng=>-79.38}, {:lat=>43.81, :lng=>-79.20},
+  {:lat=>43.86, :lng=>-79.64}, {:lat=>43.86, :lng=>-79.46}, {:lat=>43.86, :lng=>-79.29}, {:lat=>43.86, :lng=>-79.11},
 ]
