@@ -1,3 +1,5 @@
+- Set Toronto as default city.
+
 Pirozhki 0.4.0, 2014-12-26
 --------------------------
 - Using travis-ci container-based infrastructure
